--- a/libraries.gradle
+++ b/libraries.gradle
@@ -1,11 +1,11 @@
 ext {
 
-    compileSdkVersion= 30
-    buildToolsVersion ="30.0.1"
-    minSdkVersion =23
-    targetSdkVersion =30
+    compileSdkVersion = 30
+    buildToolsVersion = "30.0.1"
+    minSdkVersion = 23
+    targetSdkVersion = 30
 
-    ktxVersion ="1.3.1"
+    ktxVersion = "1.3.1"
     glideVersion = "4.11.0"
     constraintVersion = "1.1.3"
     appCompatVersion = "1.1.0"
@@ -29,43 +29,50 @@ ext {
     testExtVersion = "1.1.1"
     mockitoAndroidVersion = "3.1.0"
     expressoContribVersion = "3.2.0"
-    youtubeVersion="10.0.5"
+    youtubeVersion = "10.0.5"
+    navigationVersion = "2.3.0"
 
     libraries = [
-            ktx               : "androidx.core:core-ktx:$ktxVersion",
-            youtube           : "com.pierfrancescosoffritti.androidyoutubeplayer:core:$youtubeVersion",
-            glide             : "com.github.bumptech.glide:glide:$glideVersion",
-            constraintLayout  : "androidx.constraintlayout:constraintlayout:$constraintVersion",
-            appCompat         : "androidx.appcompat:appcompat:$appCompatVersion",
-            material          : "com.google.android.material:material:$materialVersion",
-            gson              : "com.google.code.gson:gson:$gsonVersion",
-            retrofit          : "com.squareup.retrofit2:retrofit:$retrofitVersion",
-            retrofit_converter: "com.squareup.retrofit2:converter-gson:$retrofitVersion",
-            retrofit_adpter   : "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion",
-            rxkotlin          : "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion",
-            rxandroid         : "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion",
-            okhttp            : "com.squareup.okhttp3:okhttp:$okhttpVersion",
-            glideAnnotion     : "com.github.bumptech.glide:compiler:$glideVersion",
-            swiperefreshlayout: "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefreshlayoutVersion",
-            livedata          : "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version",
-            lifecycle_compiler: "androidx.lifecycle:lifecycle-compiler:$lifecycle_version",
-            livecycle_arch_compiler  : "android.arch.lifecycle:compiler:$lifecycle_version",
+            ktx                     : "androidx.core:core-ktx:$ktxVersion",
+            navigation_fragment     : "androidx.navigation:navigation-fragment:$navigationVersion",
+            navigation_ui           : "androidx.navigation:navigation-ui:$navigationVersion",
+            navigation_fragment_ktx : "androidx.navigation:navigation-fragment-ktx:$navigationVersion",
+            navigation_ui_ktx       : "androidx.navigation:navigation-ui-ktx:$navigationVersion",
+            lifecycle_extensions    : "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
+
+            youtube                 : "com.pierfrancescosoffritti.androidyoutubeplayer:core:$youtubeVersion",
+            glide                   : "com.github.bumptech.glide:glide:$glideVersion",
+            constraintLayout        : "androidx.constraintlayout:constraintlayout:$constraintVersion",
+            appCompat               : "androidx.appcompat:appcompat:$appCompatVersion",
+            material                : "com.google.android.material:material:$materialVersion",
+            gson                    : "com.google.code.gson:gson:$gsonVersion",
+            retrofit                : "com.squareup.retrofit2:retrofit:$retrofitVersion",
+            retrofit_converter      : "com.squareup.retrofit2:converter-gson:$retrofitVersion",
+            retrofit_adpter         : "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion",
+            rxkotlin                : "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion",
+            rxandroid               : "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion",
+            okhttp                  : "com.squareup.okhttp3:okhttp:$okhttpVersion",
+            glideAnnotion           : "com.github.bumptech.glide:compiler:$glideVersion",
+            swiperefreshlayout      : "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefreshlayoutVersion",
+            livedata                : "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version",
+            lifecycle_compiler      : "androidx.lifecycle:lifecycle-compiler:$lifecycle_version",
+            livecycle_arch_compiler : "android.arch.lifecycle:compiler:$lifecycle_version",
             lifecycle_arch_extension: "android.arch.lifecycle:extensions:$lifecycle_version",
-            room              : "androidx.room:room-runtime:$room_version",
-            roomcompiler      : "androidx.room:room-compiler:$room_version",
-            junit             : "junit:junit:$junitVersion",
-            junitktx          : "androidx.test.ext:junit-ktx:$junitktxVersion",
-            corektx           : "androidx.test:core-ktx:$core_ktxVersion",
-            mockk             : "io.mockk:mockk:$mockKVersion",
-            mockito           : "org.mockito:mockito-core:$mockitoCoreVersion",
-            roboelectric      : "org.robolectric:robolectric:$roboelectricVersion",
-            expressoCore      : "androidx.test.espresso:espresso-core:$expressoCoreVersion",
-            testRule          : "androidx.test:rules:$testRuleVersion",
-            testRunner        : "androidx.test:runner:$testRuleVersion",
-            testExt           : "androidx.test.ext:junit:$testExtVersion",
-            mockitoAndroid    : "org.mockito:mockito-android:$mockitoAndroidVersion",
-            expressoContrib   : "com.android.support.test.espresso:espresso-contrib:$expressoContribVersion",
-            testCore          : "androidx.test:core-ktx:$core_ktxVersion",
-            testExtktx        :    "androidx.test.ext:junit-ktx:$testExtVersion"
+            room                    : "androidx.room:room-runtime:$room_version",
+            roomcompiler            : "androidx.room:room-compiler:$room_version",
+            junit                   : "junit:junit:$junitVersion",
+            junitktx                : "androidx.test.ext:junit-ktx:$junitktxVersion",
+            corektx                 : "androidx.test:core-ktx:$core_ktxVersion",
+            mockk                   : "io.mockk:mockk:$mockKVersion",
+            mockito                 : "org.mockito:mockito-core:$mockitoCoreVersion",
+            roboelectric            : "org.robolectric:robolectric:$roboelectricVersion",
+            expressoCore            : "androidx.test.espresso:espresso-core:$expressoCoreVersion",
+            testRule                : "androidx.test:rules:$testRuleVersion",
+            testRunner              : "androidx.test:runner:$testRuleVersion",
+            testExt                 : "androidx.test.ext:junit:$testExtVersion",
+            mockitoAndroid          : "org.mockito:mockito-android:$mockitoAndroidVersion",
+            expressoContrib         : "com.android.support.test.espresso:espresso-contrib:$expressoContribVersion",
+            testCore                : "androidx.test:core-ktx:$core_ktxVersion",
+            testExtktx              : "androidx.test.ext:junit-ktx:$testExtVersion"
     ]
 }
