--- a/libraries.gradle
+++ b/libraries.gradle
@@ -8,7 +8,7 @@ ext {
     ktxVersion = "1.3.1"
     glideVersion = "4.11.0"
     constraintVersion = "1.1.3"
-    appCompatVersion = "1.1.0"
+    appCompatVersion = "1.3.0-alpha02"
     materialVersion = "1.3.0-alpha02"
     gsonVersion = "2.8.6"
     retrofitVersion = "2.6.1"
@@ -31,6 +31,7 @@ ext {
     expressoContribVersion = "3.2.0"
     youtubeVersion = "10.0.5"
     navigationVersion = "2.3.0"
+    exoplayerVersion="2.11.5"
 
     libraries = [
             ktx                     : "androidx.core:core-ktx:$ktxVersion",
@@ -39,7 +40,9 @@ ext {
             navigation_fragment_ktx : "androidx.navigation:navigation-fragment-ktx:$navigationVersion",
             navigation_ui_ktx       : "androidx.navigation:navigation-ui-ktx:$navigationVersion",
             lifecycle_extensions    : "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
-
+            exoplayer_core          : "com.google.android.exoplayer:exoplayer-core:$exoplayerVersion",
+            exoplayer_dash          : "com.google.android.exoplayer:exoplayer-dash:$exoplayerVersion",
+            exoplayer_ui            : "com.google.android.exoplayer:exoplayer-ui:$exoplayerVersion",
             youtube                 : "com.pierfrancescosoffritti.androidyoutubeplayer:core:$youtubeVersion",
             glide                   : "com.github.bumptech.glide:glide:$glideVersion",
             constraintLayout        : "androidx.constraintlayout:constraintlayout:$constraintVersion",
