--- a/libraries.gradle
+++ b/libraries.gradle
@@ -4,7 +4,6 @@ ext {
     buildToolsVersion = "30.0.1"
     minSdkVersion = 23
     targetSdkVersion = 30
-
     ktxVersion = "1.3.1"
     glideVersion = "4.11.0"
     constraintVersion = "1.1.3"
@@ -32,6 +31,9 @@ ext {
     youtubeVersion = "10.0.5"
     navigationVersion = "2.3.0"
     exoplayerVersion="2.11.5"
+    firebaseAnalyticsVersion= "17.5.0"
+    firebaseDatabaseKtxVersion="19.4.0"
+    firebaseFirestoreKtxVersion ="21.6.0"
 
     libraries = [
             ktx                     : "androidx.core:core-ktx:$ktxVersion",
@@ -76,6 +78,9 @@ ext {
             mockitoAndroid          : "org.mockito:mockito-android:$mockitoAndroidVersion",
             expressoContrib         : "com.android.support.test.espresso:espresso-contrib:$expressoContribVersion",
             testCore                : "androidx.test:core-ktx:$core_ktxVersion",
-            testExtktx              : "androidx.test.ext:junit-ktx:$testExtVersion"
+            testExtktx              : "androidx.test.ext:junit-ktx:$testExtVersion",
+            firebaseAnalytics       : "com.google.firebase:firebase-analytics:$firebaseAnalyticsVersion",
+            firebaseDatabase        : "com.google.firebase:firebase-database-ktx:$firebaseDatabaseKtxVersion",
+            firebaseFirestore      : "com.google.firebase:firebase-firestore-ktx:$firebaseFirestoreKtxVersion"
     ]
 }
